# testing_clients

./: .gitignore
artemis_client/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
artemis_client/my_artemis_client/: __init__.py
artemis_client/my_artemis_client/client/: __init__.py  client.py  connection.py
artemis_client/my_artemis_client/endpoint/: __init__.py  base_settings.py  entities.py  lifespan.py  routes.py
artemis_client/test_app/: main.py  requirements.txt
artemis_client/tests/: conftest.py  test_routes.py
opensearch_client/: .dockerignore  Dockerfile  README.md  __init__.py  base_settings.py  docker-compose.yml  lifespan.py  pyproject.toml  pytest.ini  routes.py  test.py
opensearch_client/client/: __init__.py  connection.py
opensearch_client/my_opensearch_client/: __init__.py
opensearch_client/my_opensearch_client/client/: __init__.py  client.py
opensearch_client/my_opensearch_client/endpoint/: __init__.py  base_settings.py  entities.py  lifespan.py  routes.py
opensearch_client/test_app/: main.py  requirements.txt
opensearch_client/tests/: conftest.py  requirements.txt  test_routes.py
redis_client/: Dockerfile  README.md  __init__.py  base_settings.py  docker-compose.yml  lifespan.py  pyproject.toml  pytest.ini  redis-users.acl  routes.py  test.py
redis_client/client/: __init__.py  client.py  connection.py
redis_client/my_redis_client/: __init__.py
redis_client/my_redis_client/client/: __init__.py  client.py  connection.py
redis_client/my_redis_client/endpoint/: __init__.py  base_settings.py  entities.py  lifespan.py  routes.py
redis_client/test_app/: main.py  requirements.txt
redis_client/tests/: conftest.py  test_routes.py
s3_client/: Dockerfile  README.md  __init__.py  base_settings.py  docker-compose.yml  entities.py  lifespan.py  pyproject.toml  pytest.ini  routes.py  run_tests.sh
s3_client/client/: __init__.py  client.py  connection.py  utils.py
s3_client/my_s3_client/client/: __init__.py  client.py  utils.py
s3_client/my_s3_client/endpoint/: __init__.py  base_settings.py  lifespan.py  routes.py
s3_client/test_app/: main.py  requirements.txt
s3_client/tests/: conftest.py  test_routes.py
