[project]
name = "opensearch-client"
version = "1.0.0"
description = "Переиспользуемый клиент для работы с OpenSearch"
requires-python = ">=3.11"
dependencies = [
    "opensearch-py==2.4.0",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "my_opensearch_client" = "my_opensearch_client" }

[tool.uv.sources]
# Локальные источники пакетов (если нужно)

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests with mocks (fast, no OpenSearch required)",
    "integration: Integration tests with real OpenSearch (require running server)",
]
asyncio_mode = "auto"
testpaths = ["tests"]

