[project]
name = "redis-client"
version = "1.0.0"
description = "Переиспользуемый клиент для работы с Redis очередями"
requires-python = ">=3.11"
dependencies = [
    "redis[hiredis]==5.0.1",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
]


[tool.uv.sources]
# Локальные источники пакетов (если нужно)

[tool.pytest.ini_options]
markers = [
    "integration: Integration tests with real Redis (require running server)",
]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

