[project]
name = "s3-client"
version = "1.0.0"
description = "Переиспользуемый клиент для работы с S3 объектным хранилищем"
requires-python = ">=3.11"
dependencies = [
    "aioboto3==12.3.0",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "moto[s3]==5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "__init__.py" = "s3/__init__.py", "client" = "s3/client", "entities.py" = "s3/entities.py", "lifespan.py" = "s3/lifespan.py", "routes.py" = "s3/routes.py" }

[tool.uv.sources]
# Локальные источники пакетов (если нужно)

[tool.pytest.ini_options]
markers = [
    "integration: Integration tests with real S3 (require running server)",
]
asyncio_mode = "auto"
testpaths = ["tests"]

